sudoku/sudokuStyles.css
/* Styles for Sudoku page (sudoku.html) */


/* A container for all the solver elements */
#grid-container-puzzle {
   display: grid;
   justify-content: space-evenly;
   /* grid-template-columns: 33% 33% 33%; */
   grid-template-columns: repeat(auto-fill, 380px);
   grid-template-rows: auto;
   max-width: 1200px;
}

/* Each solver element is in a div */
#grid-container-puzzle > div {
   text-align: center;
}

/* Center the Sudoku board */
#sudokuGraphic {
   margin-left: auto;
   margin-right: auto;
}

/* fieldset > #selections {
   width: 500px;
   align-items: center;
   align-content: center;
   padding-left: 2%;
} */

/* fieldset #controls {
   width: 200px;
   align-items: center;
   align-content: center;
   padding-left: 2%;
} */

/* Center the control fieldset */
#sudokuControls {
   text-align: center;
   width: fit-content;
   padding-top: 20px;
}

table {
   border-collapse: collapse;
   border: solid 2px black;
}

td:nth-child(3), th:nth-child(3) {
   border-right: solid 2px black;
}
td:nth-child(6), th:nth-child(6) {
   border-right: solid 2px black;
}
tr:nth-child(3) {
   border-bottom: solid 2px black;
}
tr:nth-child(6) {
   border-bottom: solid 2px black;
}

td {
   width: 36px;
   height: 36px;
   border: 1px solid gray; 
   text-align: center;
}

/* Default Sudoku box styling */
/* Ok fonts: TNR, Calibri, Courier New */
/* not ok fonts: Helvetica, Arial */
/*    Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
.sudokubox {
   color: gray;
   font-size: x-large;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

/* styling for fixed numbers (original grid) */
.sudokubox.fixed {
   color: black;
   font-weight: bold;
}

/* styling for numbers determined with AC-3 */
.sudokubox.ac3 {
   color: blue;
}

.sudokubox.backtrack {
   color: green;
}

.sudokubox.final {
   color: red;
}

/* Styling for the buttons */
#playPause {
   width: 50px;
}
#fastForward {
   width: 50px;
}
#rewind {
   width: 50px;
}

